<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/MoodSelectionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/mood_selection"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/mood_button_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:importantForAutofill="no"
        android:labelFor="@+id/txtEditTitle"
        android:text="@string/description_label"
        app:layout_constraintBottom_toTopOf="@+id/txtEditDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mood_button_group" />

    <EditText
        android:id="@+id/txtEditDesc"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_margin="20dp"
        android:hint="@string/description_hint"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete|textMultiLine|textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDesc" />


    <RadioGroup
        android:id="@+id/mood_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/lblDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MoodSelectionLabel">

        <RadioButton
            android:id="@+id/mood_0_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:button="@drawable/ic_sentiment_very_dissatisfied_fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mood_1_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/mood_1_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:button="@drawable/ic_sentiment_dissatisfied_fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mood_2_button"
            app:layout_constraintStart_toEndOf="@+id/mood_0_button"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/mood_2_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:button="@drawable/ic_sentiment_neutral_fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mood_3_button"
            app:layout_constraintStart_toEndOf="@+id/mood_1_button"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/mood_3_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:button="@drawable/ic_sentiment_satisfied_fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mood_4_button"
            app:layout_constraintStart_toEndOf="@+id/mood_2_button"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/mood_4_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:button="@drawable/ic_sentiment_very_satisfied_fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mood_3_button"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/datetime_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEditDesc">

        <Button
            android:id="@+id/date_picker_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_button_default_text"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/time_picker_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/time_picker_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_button_default_text"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/date_picker_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_add_location_fill"

        android:text="@string/loc_button_default_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/datetime_button_group"/>


</androidx.constraintlayout.widget.ConstraintLayout>